--- a/slides/index.html
+++ b/slides/index.html
@@ -38,28 +38,28 @@
             <section>
               <section>
                 <h4>Currently</h4>
-                <img src="/img/appfeature0.png"/>
+                <img src="img/appfeature0.png"/>
               </section>
               <section>
-                <img src="/img/appfeature1.png"/>
+                <img src="img/appfeature1.png"/>
               </section>
             </section>
             <section>
               <section>A shopping cart with GraphQL and RelayJS</section>
               <section>
                 <div style="height: 500px">
-                  <img src="/img/cart-step1.png"/>
+                  <img src="img/cart-step1.png"/>
                 </div>
                 
               </section>
               <section>
                 <div style="height: 500px">
-                  <img src="/img/cart-step2.png"/>
+                  <img src="img/cart-step2.png"/>
                 </div>
               </section>
               <section>
                 <div style="height: 500px">
-                  <img src="/img/cart-step3.png"/>
+                  <img src="img/cart-step3.png"/>
                 </div>
               </section>
               <section>
@@ -67,11 +67,11 @@
               </section>
             </section>
             <section>
-              <img src="/img/wheregraphql.png"/>
+              <img src="img/wheregraphql.png"/>
             </section>
             <section>
               <section>
-                <img src="/img/client-server-dependence.png"/>
+                <img src="img/client-server-dependence.png"/>
               </section>
               <section>
                 <div>Higher Cohesion</div>
