--- a/slides/index.html
+++ b/slides/index.html
@@ -77,7 +77,7 @@
                 <div>Higher Cohesion</div>
                 <ul>
                   <li>Information of client-server dependence are compact into one single schema file.</li>
-                  <li>Decisions of data querying are to shift to client.</li>
+                  <li>Decisions of data querying are shifted more to client.</li>
                 </ul>
               </section>
             </section>
