--- a/slides/index.html
+++ b/slides/index.html
@@ -224,10 +224,10 @@ mutation updateProduct($input: Product!){
               </section>
               <section>
                 <ul>
-                  <ul>Connect React Component with GraphQL in declarative way</ul>
-                  <ul>Caching via Relay's local store</ul>
-                  <ul>Paging</ul>
-                  <ul>Subscription</ul>
+                  <li>Connect React Component with GraphQL in declarative way</li>
+                  <li>Caching via Relay's local store</li>
+                  <li>Paging</li>
+                  <li>Subscription</li>
                 </ul>
               </section>
             </section>
