--- a/slides/index.html
+++ b/slides/index.html
@@ -232,6 +232,9 @@ mutation updateProduct($input: Product!){
               </section>
             </section>
             <section>
+              Some code
+            </section>
+            <section>
               <div>Store data in React/Redux/Relay?</div>
               <ul>
                 <li>If data are used in one component, use React's state</li>
@@ -240,10 +243,13 @@ mutation updateProduct($input: Product!){
               </ul>
             </section>
             <section>
-              
+              Resources:
+              <ul>
+                <li><a href="https://www.youtube.com/watch?v=Oh5oC98ztvI">GraphQL: Designing a Data Language" by Lee Byron (40')</a></li>
+                <li><a href="https://www.youtube.com/watch?v=bn8qsi8jVew">Introducing GraphQL Subscriptions - Lee Byron (40')</a></li>
+                <li><a href="https://www.youtube.com/watch?v=lAJWHHUz8_8">GraphQL Basics - Fun Fun Function (48')</a></li>
+              </ul>
             </section>
-            
-
         </div>
     </div>
 
