--- a/slides/index.html
+++ b/slides/index.html
@@ -226,7 +226,7 @@ mutation updateProduct($input: Product!){
                 <ul>
                   <li>Connect React Component with GraphQL in declarative way</li>
                   <li>Caching via Relay's local store</li>
-                  <li>Paging</li>
+                  <li>Paging (See <a href="https://youtu.be/3Q9o6iUQf2Y?t=32m55s">Relay: Declarativity Beyond the UI at 32:55</a></li>
                   <li>Subscription</li>
                 </ul>
               </section>
