--- a/slides/index.html
+++ b/slides/index.html
@@ -62,9 +62,6 @@
                   <img src="img/cart-step3.png"/>
                 </div>
               </section>
-              <section>
-                The data of 3 steps are saved on server.
-              </section>
             </section>
             <section>
               <img src="img/wheregraphql.png"/>
@@ -226,6 +223,7 @@ mutation updateProduct($input: Product!){
                 <ul>
                   <li>Connect React Component with GraphQL in declarative way</li>
                   <li>Caching via Relay's local store</li>
+                  <li>Optimist update</li>
                   <li>Paging (first, after) (See <a href="https://youtu.be/3Q9o6iUQf2Y?t=32m55s">Relay: Declarativity Beyond the UI at 32:55</a></li>
                   <li>Subscription</li>
                 </ul>
